k8/example3/openam-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openam-svc
  labels:
    name: openam-svc
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: openam
      nodePort: 30080
  selector:
    site: site1
