k8/example3/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openam
spec:
  rules:
  - host: openam.example.com
    http:
      paths:
      - path: /openam/*
        backend:
          serviceName: openam-svc
          # todo: is the the svc port 80, or the nodeport?
          servicePort: 80
